3.28.0-rc5: execute_process no longer supports executables without any extension
vcpkg CI run with 3.28-rc5 still shows regressions: https://github.com/microsoft/vcpkg/pull/35326
I am mostly concerned about the ryu build failure since this seems to be related to a subtle change how execute_process
treats directories or similar.
The command is:
"E:/vcpkg_folders/new_master/installed/x64-windows-release/tools/bazel
--batch build --cpu=x64_windows --conlyopt=-nologo --conlyopt=-DWIN32
--conlyopt=-D_WINDOWS --conlyopt=-W3 --conlyopt=-utf-8 --conlyopt=-MP
--conlyopt=-MD --conlyopt=-O2 --conlyopt=-Oi --conlyopt=-Gy
--conlyopt=-DNDEBUG --conlyopt=-Z7 --linkopt=-machine:x64 --linkopt=-nologo
--linkopt=-DEBUG --linkopt=-INCREMENTAL:NO --linkopt=-OPT:REF
--linkopt=-OPT:ICF --verbose_failures --strategy=CppCompile=standalone
//ryu //ryu:ryu_printf"
The error is:
no such file or directory
Using CMake 3.27.1 the port simply builds